# gb_emulator

./: .gitignore  404.html  Cargo.toml  README.md  decoded_values.txt  failed_values.txt  index.html  sitemap-0.xml  sitemap-index.xml
.github/workflows/: build_docs.yml  clippy.yml  test.yml
_astro/: hoisted.CD2k7qrA.js  hoisted.CG3JS_KA.js  hoisted.L59Z1rN5.js  ui-core.DMHpRWrD.js  ui-core.DY2VOetX.js  ui-core.ywIvVTxy.js
arc42/00-about-arc42/: index.html
arc42/01-introduction-and-goals/: index.html
arc42/02-architecture-constraints/: index.html
arc42/03-context-and-scope/: index.html
arc42/04-solution-strategy/: index.html
arc42/05-building-block-view/: index.html
arc42/06-runtime-view/: index.html
arc42/07-deployment-view/: index.html
arc42/08-crosscutting-concepts/: index.html
arc42/09-architecture-decisions/: index.html
arc42/10-quality-requirements/: index.html
arc42/11-risks-and-technical-debt/: index.html
arc42/12-glossary/: index.html
diagrams/: layout.uxf
docs/: astro.config.mjs  bun.lockb  package.json
pagefind/: pagefind-entry.json  pagefind.en_30d971ffb7.pf_meta  pagefind.en_5f37de4a86.pf_meta  pagefind.en_785d2726ba.pf_meta  pagefind.en_8fcbce351b.pf_meta  pagefind.en_922226ae99.pf_meta  pagefind.en_a54726a3c5.pf_meta
pagefind/fragment/: en_128a1b8.pf_fragment  en_16f8781.pf_fragment  en_187e81d.pf_fragment  en_31b4c5c.pf_fragment  (+30 more)
src/: cpu.rs  main.rs  memory.rs  mmu.rs  rendering.rs  test_helpers.rs  test_tile_viewer.rs
test_data/: hello_world.gb  simple_text_print.gb
test_files/: vram-read-cgbBCE-vram.txt
(+73 files in other folders)
